# matrix-io

./: .gitignore  .gitmodules  Cargo.toml
examples/everloop/: Cargo.toml  install.sh
examples/everloop/.cargo/: config
examples/everloop/src/: main.rs
matrix-creator-hal-sys/: Cargo.toml  build.rs  wrapper.hpp
matrix-creator-hal-sys/src/: bindings.rs
matrix-voice/: Cargo.toml
matrix_hal_esp32_sys/: Cargo.toml  Makefile  bindgen-project  build.rs  wrapper.hpp
matrix_hal_esp32_sys/src/: bindings.rs  lib.rs
