[package]
name = "matrix-voice"
version = "0.1.0"
authors = ["jeikabu <jeikabu@users.noreply.github.com>"]
edition = "2018"

description = "Matrix Voice"
repository = "https://github.com/jeikabu/matrix-io"
keywords = []
categories = []
license = "MIT"

[dependencies]
matrix-creator-hal-sys = {version = "0.1", path = "../matrix-creator-hal-sys"}