[package]
name = "matrix_hal_esp32_sys"
version = "0.1.0"
authors = ["jeikabu <jeikabu@users.noreply.github.com>"]
edition = "2018"

description = "matrix_hal_esp32_sys"
repository = "https://github.com/jeikabu/matrix-io"
keywords = []
categories = []
license = "MIT"

[features]
default = []
bindgen_generate = ["bindgen"]

[dependencies]
cty = {version = "0.2"}

[build-dependencies]
cmake = {version = "0.1"}
bindgen = {version = "0.52", optional = true}